<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.add_story.AddStoryActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_preview_photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2">

        <ImageView
            android:id="@+id/iv_preview_photo"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            android:src="@drawable/il_placeholder"
            android:transitionName="photo"
            tools:ignore="ContentDescription" />
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/bt_gallery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gallery"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cv_preview_photo"
        app:layout_constraintVertical_bias="0.1" />

    <Button
        android:id="@+id/bt_camera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/camera"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/cv_preview_photo"
        app:layout_constraintVertical_bias="0.1" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_description"
        style="@style/light"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/spacing_40"
        android:hint="@string/description"
        app:layout_constraintBottom_toTopOf="@+id/bt_add_story"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_gallery"
        app:layout_constraintVertical_bias="0">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_add_description"
            style="@style/light"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.mirz.storyapp.widget.ProgressButton
        android:id="@+id/bt_add_story"
        style="@style/Widget.ProgressButton.Primary"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/spacing_40"
        android:layout_marginBottom="@dimen/spacing_40"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:text="@string/upload" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <TextView
        android:id="@+id/textView"
        style="@style/light"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enable_location"
        android:textColor="@color/gray_200"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/bt_add_story"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="@+id/til_description"
        app:layout_constraintTop_toBottomOf="@+id/til_description"
        app:layout_constraintVertical_bias="0.2" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switch_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="@+id/textView" />

</androidx.constraintlayout.widget.ConstraintLayout>